# neuralnet

./: .gitignore  CMakeLists.txt  README.md  make.sh
classification/: testing.csv
src/: config.cpp  config.hpp  globals.hpp  main.cpp  math.cpp  math.hpp  neuralnetwork.cpp  neuralnetwork.hpp  render.cpp  render.hpp  utils.cpp  utils.hpp
state/: network_state.txt
training/: training.csv  training_old.csv
visualize/: plot.py  plot_classify.py  plot_train.py
